--- a/src/frontend/index.html
+++ b/src/frontend/index.html
@@ -1,10 +1,8 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <title>React App</title>
-  </head>
-  <body>
-
-  </body>
+    <head>
+        <meta charset="UTF-8" />
+        <title>React App</title>
+    </head>
+    <body></body>
 </html>
